--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div id="bluesquare">
+    <div class="ray-square-holder">
+      <div id="bluesquare"></div>
+      <div id="rays"> </div>
     </div>
   </body>
   <script type="text/javascript" src="index.js"></script>
